--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.6",
     "@supabase/supabase-js": "^2.49.1",
     "@tremor/react": "^3.13.1",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.3.1",
@@ -40,6 +42,7 @@
     "recharts": "^2.11.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^0.8.0",
     "zod": "^3.24.2"
   },
